--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 
 </head>
 <body lang="he" dir="rtl" class="position-relative">
-
-
-
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="index.html">
@@ -43,22 +40,50 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">אודות</a>
       </li>
-      <li class="nav-item">
-        <div class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">תכנים</a>
-          <div class="dropdown-menu m-0">
-              <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
-              <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע</a>
-              <a href="dataBases.html" class="dropdown-item">מאגרי מידע</a>
-              <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים</a>
-              <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית</a>
-          </div>
-      </div>        
+      <li class="nav-item dropdown" id="myDropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
+        <ul class="dropdown-menu">
+          <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">פורטל הספרייה</a></li>
+              <li><a class="dropdown-item" href="#">קטלוג הספרייה</a></li>
+            </ul>
+          </li>
+          <li>  <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">מבנה המאמר האקדמי</a></li>
+              <li><a class="dropdown-item" href="#">סוגי מקורות מידע</a></li>
+              <li><a class="dropdown-item" href="#">הערכת מידע באינטרנט</a> </li>
+            </ul>
+          </li>
+          <li>   <a href="dataBases.html" class="dropdown-item">מאגרי מידע&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">מהו מאגר מידע</a></li>
+              <li><a class="dropdown-item" href="#">הבדלים בין מאגרי מידע</a></li>
+            </ul>
+          </li>
+          <li>   <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
+              <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
+              <li><a class="dropdown-item" href="#">חיפוש יעיל באנגלית</a> </li>
+            </ul>
+          </li>
+          <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">כללי ציטוט</a></li>
+              <li><a class="dropdown-item" href="#">כלים טכנולוגיים לציטוט</a></li>
+            </ul>
+          </li>
+       </ul>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">שאלות נפוצות</a>
       </li>
-    </ul>
+      <li class="nav-item">
+        <a class="nav-link" href="#">מפת אתר</a>
+      </li>
+   </ul>
     <form class="form-inline mb-2 mb-md-0 d-flex">
       <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
       <button class="btn btn-outline-primary" type="submit" id="search-btn">
@@ -71,35 +96,31 @@
 </nav>
 
 
-
-
 <!--תפריט ניווט סוף-->
 
+
 <header>
-<div class="header">
-  <div class="container-xxl py-5  hero-header mb-5">
-    <div class="container my-5 py-5 px-lg-5">
+  <div class="header pb-0">
+    <div class="container-xxl py-lg-1 mb-5">
+      <div class="container my-5 px-lg-5">
         <div class="row g-5 py-5">
-            <div class="col-lg-6 text-center text-lg-start">
-                <h1 class="text-white mb-4 " >כיף שהצטרפתם!</h1>
-                <p class="text-white pb-3" >ברוכים הבאים לאתר הלימודי<br/>
- של ספריית המכון הטכנולוגי HIT</p>
-            </div>
-            <div class="col-lg-6 text-center text-lg-start">
-                <img class="img-fluid" src="images/MainpageImage.png" alt="books">
-            </div>
+          <div class="col-lg-6 text-sm-start text-lg-start">
+            <h1 class="text-black mb-4 pt-4">כיף שהצטרפתם!</h1>
+            <h5 class="text-black">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+          </div>
+          <div class="col-lg-4 d-flex justify-content-end ">
+            <img class="img-fluid d-none d-lg-block float-start ml-lg-0" src="images/MainpageImage.png" alt="books">
+          </div>
         </div>
-    </div>
-     </div>
-    </div>
-  </header>
-  <main class="container mt-5">
-    <div class="container">
-    <div class="section-title position-relative text-center mb-5 pb-2">
-      <h6 class="position-relative d-inline text-primary ps-4">הדרכות דיגיטליות</h6>
-      <h2 class="mt-2">מה תרצו ללמוד היום?</h2>
       </div>
-  <section id="section1"></section>
+    </div>
+  </div>
+</header>
+
+
+  <main>
+    <div class="container">
+      <h5 class="mt-2 pb-4 pr-3">איזה נושא תרצו ללמוד היום?</h5>
   <div class="row">
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
@@ -175,17 +196,38 @@
 </div>
 </Main>
 
-
-  <footer class="bg-light py-3">
+<footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
-    <p class="text-center text-secondary">Copyright &copy; עוצב ופותח על ידי קורל ששון ודולב קליינר במסגרת פרוייקט גמר- טכנולוגיות למידה 2023</p>
-    <div class="d-flex justify-content-center">
-      <a class="text-secondary mx-3" href="about.html">אודות</a>
-      <a class="text-secondary mx-3" href="index.html">תכנים</a>
-      <a class="text-secondary mx-3" href="index.html">לחיפוש בספרייה</a>
+    <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
+      <a class="text-black text-center" href="about.html">אודות</a>
+      <div class="col-md-1 text-center">
+        <a class="text-black">תכנים</a>
+        <div class="text-lg-start">
+        <ul class="list-unstyled">
+          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
+          <li><a href="dataBases.html">מאגרי מידע</a></li>
+          <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
+          <li><a href="bibList.html">רשימה ביבליוגרפית</a></li>
+        </ul>
+      </div>
+      </div>
+      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
+      <div class="text-center mt-3">
+        <a class="text-black">צור קשר</a>
+        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
+      </div>
+      <div class="text-center mt-3">
+        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
+          הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
+        <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+      </div>
     </div>
   </div>
-  </footer>
+</footer>
+
+
 </body>
 
 </html>
