--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -38,22 +38,50 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">אודות</a>
       </li>
-      <li class="nav-item">
-        <div class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">תכנים</a>
-          <div class="dropdown-menu m-0">
-              <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
-              <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע</a>
-              <a href="dataBases.html" class="dropdown-item">מאגרי מידע</a>
-              <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים</a>
-              <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית</a>
-          </div>
-      </div>        
+      <li class="nav-item dropdown" id="myDropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
+        <ul class="dropdown-menu">
+          <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">פורטל הספרייה</a></li>
+              <li><a class="dropdown-item" href="#">קטלוג הספרייה</a></li>
+            </ul>
+          </li>
+          <li>  <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">מבנה המאמר האקדמי</a></li>
+              <li><a class="dropdown-item" href="#">סוגי מקורות מידע</a></li>
+              <li><a class="dropdown-item" href="#">הערכת מידע באינטרנט</a> </li>
+            </ul>
+          </li>
+          <li>   <a href="dataBases.html" class="dropdown-item">מאגרי מידע&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">מהו מאגר מידע</a></li>
+              <li><a class="dropdown-item" href="#">הבדלים בין מאגרי מידע</a></li>
+            </ul>
+          </li>
+          <li>   <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
+              <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
+              <li><a class="dropdown-item" href="#">חיפוש יעיל באנגלית</a> </li>
+            </ul>
+          </li>
+          <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
+            <ul class="submenu dropdown-menu">
+              <li><a class="dropdown-item" href="#">כללי ציטוט</a></li>
+              <li><a class="dropdown-item" href="#">כלים טכנולוגיים לציטוט</a></li>
+            </ul>
+          </li>
+       </ul>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">שאלות נפוצות</a>
       </li>
-    </ul>
+      <li class="nav-item">
+        <a class="nav-link" href="#">מפת אתר</a>
+      </li>
+   </ul>
     <form class="form-inline mb-2 mb-md-0 d-flex">
       <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
       <button class="btn btn-outline-primary" type="submit" id="search-btn">
@@ -67,21 +95,22 @@
 
 
 
-
 <!--תפריט ניווט סוף-->
 
 
 <header>
 <div class="header">
   <div class="headerinpage">
-  <div class="container-xxl py-5 hero-header  mt-4">
+  <div class="container-xxl py-5 hero-header">
     <!--פירורי לחם-->
+    <div class="pt-3">
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
         <li class="breadcrumb-item" aria-current="page">חיפוש מאמרים</li>
        </ol>
        </nav> 
+       </div>
         <!--סוף פירורי לחם-->
    <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
@@ -89,7 +118,6 @@
             <div class="section-title position-relative text-start mb-5 pb-2">
               <h2 >חיפוש מאמרים</h2>                
           </div>
-          <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
         </div>
      </div>
      </div>
@@ -97,62 +125,41 @@
   </div>
    </div>
    </header>    
-   <Main class="p-4">
-   
-      <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
+
+
+   <Main>
+    <div class="container p-4">
+      <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
+    <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-start align-items-center">
+      <div class="col pb-4">
+        <div class="card ">
           <img src="/images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
-            <p class="cardInnerPage-text overflow-hidden" style="height: 50px;">
+            <p class="card-text overflow-hidden" style="height: 50px;">
               הסבר על הגדרות נפוצות של חיפוש מתקדם לביצוע סינון יעיל של תוצאות החיפוש במאגר המידע            </p>
        </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">סרטון</span>
-            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
-              3 דקות</span> 
-        
-        </div>
+            <span class="badge badge-pill badge-light w-auto"> 3 דקות</span> 
         </div>
       </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage" id="tobooleanRise">
+      <div class="col pb-4">
+        <div class="card "  id="tobooleanRise">
           <img src="/images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
+          <div class="card-body d-flex flex-column" >
             <h5 class="card-title">אופרטורים בוליאניים</h5>
             <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש</p>
           </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
-            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
-              3 דקות</span> 
+            <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
           </div>
         </div>
       </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/Group 94.png"class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">אסטרטגיות חיפוש</h5>
-            <p class="card-text">אופן השימוש במילות מפתח והצגת כלים טכנולוגיים המסייעים בהרחבת החיפוש ומציאת מילים נרדפות</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">לומדה</span>
-            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
-              3 דקות</span> 
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card" id="toEnglishSearchRise">
-          <div class="cardInnerPage">
+      <div class="col pb-4">
+        <div class="card " id="toEnglishSearchRise">
           <img src="/images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">חיפוש יעיל בשפה האנגלית</h5>
@@ -160,24 +167,42 @@
           </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
-            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
-              3 דקות</span> 
+            <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
           </div>
           </div>
-        </div>
       </div>
     </div>
+  </div>
 </Main>
 
-  
 
-<footer class="bg-light py-3">
+<footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
-    <p class="text-center text-secondary">Copyright &copy; עוצב ופותח על ידי קורל ששון ודולב קליינר במסגרת פרוייקט גמר- טכנולוגיות למידה 2023</p>
-    <div class="d-flex justify-content-center">
-      <a class="text-secondary mx-3" href="about.html">אודות</a>
-      <a class="text-secondary mx-3" href="index.html">תכנים</a>
-      <a class="text-secondary mx-3" href="index.html">לחיפוש בספרייה</a>
+    <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
+      <a class="text-black text-center" href="about.html">אודות</a>
+      <div class="col-md-1 text-center">
+        <a class="text-black">תכנים</a>
+        <div class="text-lg-start">
+        <ul class="list-unstyled">
+          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
+          <li><a href="dataBases.html">מאגרי מידע</a></li>
+          <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
+          <li><a href="bibList.html">רשימה ביבליוגרפית</a></li>
+        </ul>
+      </div>
+      </div>
+      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
+      <div class="text-center mt-3">
+        <a class="text-black">צור קשר</a>
+        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
+      </div>
+      <div class="text-center mt-3">
+        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
+          הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
+        <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+      </div>
     </div>
   </div>
 </footer>
