--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <div class="container-xxl py-lg-1 mb-5">
       <div class="container my-5 px-lg-5">
         <div class="row g-5 py-5">
-          <div class="col-lg-6 text-sm-start text-lg-start">
-            <h1 class="text-black mb-4 pt-4">כיף שהצטרפתם!</h1>
-            <h5 class="text-black">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+          <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
+            <h1 class="mb-4 pt-4">כיף שהצטרפתם!</h1>
+            <h5>ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
           </div>
           <div class="col-lg-4 d-flex justify-content-end ">
             <img class="img-fluid d-none d-lg-block float-start ml-lg-0" src="images/MainpageImage.png" alt="books">
@@ -120,7 +120,7 @@
 
   <main>
     <div class="container">
-      <h5 class="mt-2 pb-4 pr-3">איזה נושא תרצו ללמוד היום?</h5>
+      <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b;">איזה נושא תרצו ללמוד היום?</h5>
   <div class="row">
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
