--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -25,7 +25,6 @@
 </head>
 <body lang="he" dir="rtl" class="position-relative">
 
-
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="index.html">
@@ -129,7 +128,7 @@
    </header>    
 
 
-   <Main>
+   <main>
     <div class="container p-4">
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
     <div class="row row-cols-1 row-cols-md-4 g-4 justify-content-start align-items-center">
@@ -174,7 +173,7 @@
       </div>
     </div>
   </div>
-</Main>
+</main>
 
 
 <footer class="footer rtl-footer-bg py-3 d-flex">
