--- a/startpage.html
+++ b/startpage.html
@@ -130,6 +130,8 @@
    </header>    
 
    <main class="p-4">
+    <div class="position-relative">
+    <img src="images/Vector.png" class="background-image">
     <div class="container">
     <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
@@ -162,6 +164,7 @@
       </div> 
     </div>
   </div>
+    </div>
 </main>
 
   
